# nexrad-workbench

./: .gitignore  ARCHITECTURE.md  BACKLOG_ISSUES.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  Trunk.toml  build.rs  create-backlog-issues.sh  index.html  nexrad-workbench-29edf20a5bce3258.js  nexrad-workbench-c0c25fe5230f0275.js  service-worker.js  worker.js
.cargo/: config.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pages.yml  pr-preview.yml  release.yml
assets/: manifest.json  manifest.webmanifest  sw.js
docs/: BACKLOG.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PRODUCT.md  TODO.md
pr-preview/pr-1/: index.html
pr-preview/pr-10/: index.html  nexrad-workbench-92d95b3615a06f0b.js  nexrad-workbench-cee015ff53fffff6.js
pr-preview/pr-100/: index.html  nexrad-workbench-691eeb6cc1f01458.js
pr-preview/pr-101/: index.html
pr-preview/pr-102/: index.html  nexrad-workbench-71cda10b5ab291c5.js
pr-preview/pr-103/: index.html  nexrad-workbench-4d9524bb20891f4a.js
pr-preview/pr-104/: index.html  nexrad-workbench-d18d8f0d74745458.js
pr-preview/pr-105/: index.html  nexrad-workbench-3baceac268a1fd32.js  nexrad-workbench-485fd2f613a9002c.js  nexrad-workbench-617949c145089428.js  nexrad-workbench-da10e99262024a15.js
pr-preview/pr-106/: index.html  nexrad-workbench-29839c295955e4f8.js  nexrad-workbench-42f78b845f1bb9.js  nexrad-workbench-c1976a17910445ab.js  nexrad-workbench-e7837ea8726d2844.js
pr-preview/pr-107/: index.html
pr-preview/pr-108/: index.html  nexrad-workbench-51987ea1251a78ed.js
pr-preview/pr-109/: index.html  nexrad-workbench-ffe3bd3df0eaf544.js
pr-preview/pr-11/: index.html  nexrad-workbench-4f602d365b3fd2d7.js  nexrad-workbench-75d527385b0e0066.js
pr-preview/pr-110/: index.html  nexrad-workbench-1616fe8b64355318.js  nexrad-workbench-57af8dba9fd412bf.js  worker.js
pr-preview/pr-111/: index.html  nexrad-workbench-2e586577c34a3174.js
pr-preview/pr-12/: index.html
pr-preview/pr-13/: index.html  nexrad-workbench-873c2675b6df0d87.js  nexrad-workbench-87c2b2dfc4394ae0.js
pr-preview/pr-19/: index.html
pr-preview/pr-2/: index.html
pr-preview/pr-20/: index.html  nexrad-workbench-a116a877c4037f9b.js  nexrad-workbench-b3ad7ff077390e5a.js  nexrad-workbench-ef7f7ed2b4f97f09.js
pr-preview/pr-21/: index.html  nexrad-workbench-39d7082153275114.js
pr-preview/pr-22/: index.html
pr-preview/pr-24/: index.html
pr-preview/pr-3/: index.html  nexrad-workbench-1ec5a4eea50eb784.js
pr-preview/pr-36/: index.html  nexrad-workbench-3fe149ed5ef1c88f.js
pr-preview/pr-37/: index.html  worker.js
pr-preview/pr-38/: index.html  nexrad-workbench-166b9957b54d288e.js  nexrad-workbench-27dbf70b5c9f4ba3.js  nexrad-workbench-87785bec4db401c1.js  nexrad-workbench-8ea254d30b2665c3.js  nexrad-workbench-f38ceced2416c284.js
pr-preview/pr-39/: index.html  nexrad-workbench-a24a4952cc776b2d.js
pr-preview/pr-4/: index.html  nexrad-workbench-d2102ec0a84ace4.js
pr-preview/pr-40/: index.html  nexrad-workbench-ef249459638e721c.js
pr-preview/pr-43/: index.html
pr-preview/pr-44/: index.html  nexrad-workbench-2d5a6a6ce13c903.js  nexrad-workbench-857bf047a7fed8f4.js
pr-preview/pr-50/: index.html
pr-preview/pr-51/: index.html  nexrad-workbench-d931fe381eebf037.js
pr-preview/pr-52/: index.html  nexrad-workbench-88684de9922895fe.js  nexrad-workbench-f564ce4c0fa4e57c.js
pr-preview/pr-53/: index.html  nexrad-workbench-476727c2f65ca027.js  nexrad-workbench-757cfb4d5e83d218.js  nexrad-workbench-aec944c0309da22c.js  nexrad-workbench-f12ce0c0fee1ed0e.js
pr-preview/pr-55/: index.html
pr-preview/pr-57/: index.html  nexrad-workbench-2a5106101f5802a8.js
pr-preview/pr-58/: index.html
pr-preview/pr-59/: index.html  nexrad-workbench-732411234e82928f.js  nexrad-workbench-e29d439ef6a0071a.js
pr-preview/pr-60/: index.html  nexrad-workbench-205de3100e651fad.js
pr-preview/pr-61/: index.html
pr-preview/pr-62/: index.html  nexrad-workbench-83d95454fdf5dd7.js
pr-preview/pr-63/: index.html  nexrad-workbench-5f2f5223b2868aac.js
pr-preview/pr-66/: index.html  nexrad-workbench-304998fc79422df.js
pr-preview/pr-67/: index.html  nexrad-workbench-d8003642c9baf5c8.js
pr-preview/pr-71/: index.html  nexrad-workbench-760e6100d55c0dbd.js
pr-preview/pr-72/: index.html  nexrad-workbench-f12823bf33fe84a2.js
pr-preview/pr-73/: index.html  nexrad-workbench-9d76d2c6d14aad18.js
pr-preview/pr-75/: index.html  nexrad-workbench-838909bfece455c5.js
pr-preview/pr-76/: index.html  nexrad-workbench-863ce8233bc3f872.js
pr-preview/pr-77/: index.html  nexrad-workbench-676ce2f58661fd8c.js
pr-preview/pr-78/: index.html  nexrad-workbench-7f4b55a49defc7e0.js
pr-preview/pr-79/: index.html  nexrad-workbench-94d965e47def8f43.js
pr-preview/pr-80/: index.html  nexrad-workbench-3471ae49402c182b.js  nexrad-workbench-b31a038d4dba1b47.js
pr-preview/pr-81/: index.html  nexrad-workbench-4914a233a3d3f28d.js  nexrad-workbench-4e9137be84547555.js  nexrad-workbench-5a00f661f445ed6d.js
pr-preview/pr-82/: index.html  service-worker.js
pr-preview/pr-83/: index.html  nexrad-workbench-97de68d060dd4f22.js
pr-preview/pr-84/: index.html  nexrad-workbench-444717028d094787.js
pr-preview/pr-85/: index.html  nexrad-workbench-7d0397b9a1fa3507.js
pr-preview/pr-86/: index.html  nexrad-workbench-e5fa143e8fbf08fb.js
src/: app.rs  file_ops.rs  lib.rs  main.rs  renderer.rs
src/alerts/: api.rs  (+6 more)
web/: index.html
(+172 files in other folders)
