[package]
name = "nexrad-workbench"
version = "0.1.0"
edition = "2021"
authors = ["nexrad-workbench contributors"]
license = "MIT"
description = "A web-based NEXRAD radar data visualization workbench"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }
log = "0.4"
rfd = "0.17"  # Cross-platform file dialog
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
geojson = "0.24"
geo-types = "0.7"
shapefile = "0.6"
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind"] }
nexrad = { version = "1.0.0-rc.3", default-features = false, features = ["model", "decode", "data", "serde", "render", "wasm"] }
nexrad-data = "1.0.0-rc.4"  # Direct dependency for latest ChunkIterator fixes
nexrad-render = "1.0.0-rc.2"  # Direct dependency for faster render_radials API
piet-common = "0.8"
web-time = "1.1"  # Cross-platform timing (works on WASM and native)

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = "0.4"  # Lightweight async executor for native

# Web-specific dependencies (only on wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Event",
    "EventTarget",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbKeyRange",
    "IdbVersionChangeEvent",
    "DomException",
    "DomStringList",
    "Response",
    "Location",
    "History",
] }
js-sys = "0.3"

[profile.release]
opt-level = 2

[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = true
