[package]
name = "nexrad-workbench"
version = "0.1.0"
edition = "2021"
authors = ["nexrad-workbench contributors"]
license = "MIT"
description = "A web-based NEXRAD radar data visualization workbench"

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_glow = "0.33"
glow = "0.16"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
geo-types = "0.7"
glam = "0.29"
shapefile = "0.7"
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind"] }
nexrad = { version = "1.0.0-rc.4", default-features = false, features = ["wasm"] }
nexrad-data = "1.0.0-rc.6"
nexrad-decode = "1.0.0-rc.3"  # Direct dependency for VCP message extraction
nexrad-model = "1.0.0-rc.2"   # Direct dependency for SweepField/RadarCoordinateSystem
nexrad-process = "1.0.0-rc.1" # Storm cell detection
nexrad-render = "1.0.0-rc.4"  # Direct dependency for render_radials API
web-time = "1.1"  # Cross-platform timing (works on WASM and native)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Event",
    "EventTarget",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbKeyRange",
    "IdbVersionChangeEvent",
    "DomException",
    "DomStringList",
    "Response",
    "Location",
    "History",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "ErrorEvent",
    "Document",
    "Element",
    "NodeList",
] }
js-sys = "0.3"
egui-phosphor = { version = "0.11.0", features = ["regular"] }

[profile.release]
opt-level = "s"
lto = true
